fix spacing for about quote

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ nav span {
 }
 
 #about-quote {
-	text-align: center;
+	margin: 0 auto;
 	max-width: 60%;
 	font-size: 2.5em;
 }
